--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
   "name": "jsx-to-rn",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "description": "A React Native library that brings familiar HTML tags like <div>, <p>, and <h1> to mobile, making cross-platform development intuitive and seamless.",
+  "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "build": "tsc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Bashamega/jsx-to-rn.git"
+  },
+  "keywords": [
+    "JSX",
+    "React-Native"
+  ],
+  "author": "Adam Basha",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Bashamega/jsx-to-rn/issues"
+  },
+  "homepage": "https://github.com/Bashamega/jsx-to-rn#readme",
+  "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
-  },
-  "private": true
+    "react": "^18.3.1",
+    "react-native": "^0.76.1"
+  }
 }
