--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@types/react-native": "^0.73.0",
     "typescript": "^5.6.3"
   },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-native": "^0.76.1"
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
   }
 }
