--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "jsx-to-rn",
   "version": "1.0.0",
   "description": "A React Native library that brings familiar HTML tags like <div>, <p>, and <h1> to mobile, making cross-platform development intuitive and seamless.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
