--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
+    "target": "esnext", // or "es6"
+    "module": "commonjs",
+    "jsx": "react-native",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "rootDir": "./src",
-    "declaration": true,
-    "jsx": "react",
-    "esModuleInterop":true
+    "declaration": true // Generate .d.ts files
   },
   "include": ["src/**/*"],
-
+  "exclude": ["node_modules", "dist"]
 }
